--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,36 @@
-# Built application files
-/*/build/
+# files for the dex VM
+*.dex
 
-# Crashlytics configuations
-com_crashlytics_export_strings.xml
+# generated files
+bin/
+gen/
+infer-out/
+captures/
 
 # Local configuration file (sdk path, etc)
 local.properties
+gradlew
+gradlew.bat
 
-# Gradle generated files
-.gradle/
+# Windows thumbnail db
+Thumbs.db
 
-# Signing files
-.signing/
+# OSX files
+.DS_Store
 
-# User-specific configurations
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
+# Android Studio
+.idea
+/build
+.gradle
+
+# Android Studio Struct files
+/out
+*/build
+*/production
+*.iws
+*.ipr
+*~
+*.swp
 *.iml
 
-# OS-specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+
